--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -123,7 +123,7 @@ border-top-right-radius: 5px;
 
 #header-img
 { 
- margin:0px 20px -3px 0px;
+ margin:-6px 23px -20px 15px;
 }
 
 #header-bottom-left{padding-top:10px}
@@ -177,7 +177,7 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%kilroywashat%%);
+ background:url(%%burnt-hat%%);
  width:70px;
  height:70px;
  margin-top:-45px;
@@ -950,6 +950,9 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-sunburst
 {background-position:-200% -2700%}
 
+.flair-sweaters
+{background-position:-200% -2800%}
+
 a[href|="/flutterroll"],a[href|="/a30"],a[href|="/rflutterroll"],a[href|="/ra30"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/trixiesad"],a[href|="/c30"],a[href|="/rtrixiesad"],a[href|="/rc30"],a[href|="/twisad"],a[href|="/e30"],a[href|="/rtwisad"],a[href|="/re30"],a[href|="/f30"],a[href|="/flutterhay"],a[href|="/rf30"],a[href|="/rflutterhay"],.flair-applejack,.side .md table tr:nth-of-type(1) td:nth-of-type(5):after
 {background-position:-300% 0}
 
@@ -1033,6 +1036,9 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 
 .flair-gilda
 {background-position:-300% -2700%}
+
+.flair-socks
+{background-position:-300% -2800%}
 
 .flair-cmchaz, .flair-cmclinker, .flair-cmclanky, .flair-cmcmouse, .flair-cmcchinchy, .flair-cmcspokes, .flair-cmcopti, .flair-cmcorsch, .flair-cmcgb, .flair-cmcsparroew, .flair-cmcaroelen {background-position: -300% -100%}
 .flair-cmchaz:hover {background-position: -200% -700%}
