--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -521,7 +521,7 @@ a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100d 'motes */
-a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"]
+a[href|="/vinylscrewyou"], a[href|="/browniewat"], a[href|="/rainbowtwiglee"], a[href|="/sillybooze"], a[href|="/chrysathis"], a[href|="/discordsmug"], a[href|="/discrazy"], a[href|="/emberhappy"], a[href|="/trixieface"], a[href|="/ikickedthepuppy"], a[href|="/sadspike"], a[href|="/whatismylife"], a[href|="/fsfu"], a[href|="/ponk"], a[href|="/nerdfleetfoot"], a[href|="/cadancegonnacutsomeone"], a[href|="/cadencegonnacutsomeone"], a[href|="/flutterhonk"], a[href|="/smugshy"], a[href|="/sunsetcrazy"], a[href|="/raricatmallow"], a[href|="/raricatmellow"], a[href|="/twiscrunchwings"], a[href|="/trixiebag"], a[href|="/twilightyoufool"], a[href|="/twilightscold"], a[href|="/chrysalisrage"], a[href|="/youdensemotherbucker"]
 {background-image:url(%%100x100d%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -622,7 +622,7 @@ a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /* Misfits o */
-a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthere"], a[href|="/spikefakesmile"], a[href|="/babythorax"], a[href|="/babychangeling"], a[href|="/aurryhugs"], a[href|="/pinkiebard"], a[href|="/thoraxaww"], a[href|="/adorababs"], a[href|="/sweetiegtfo"], a[href|="/discordvillain"], a[href|="/ishipitsohard"], a[href|="/twistarcuddle"], a[href|="/ppangel"], a[href|="/hmmcoffee"], a[href|="/twilightsdayout"], a[href|="/letskickthepuppy"], a[href|="/morningflutter"], a[href|="/twibag"], a[href|="/bloomrage"]
+a[href|="/flscrunch"], a[href|="/downcastspike"], a[href|="/lyraseewhatyoudidthere"], a[href|="/spikefakesmile"], a[href|="/babythorax"], a[href|="/babychangeling"], a[href|="/aurryhugs"], a[href|="/pinkiebard"], a[href|="/thoraxaww"], a[href|="/adorababs"], a[href|="/sweetiegtfo"], a[href|="/discordvillain"], a[href|="/ishipitsohard"], a[href|="/twistarcuddle"], a[href|="/ppangel"], a[href|="/hmmcoffee"], a[href|="/twilightsdayout"], a[href|="/letskickthepuppy"], a[href|="/morningflutter"], a[href|="/twibag"], a[href|="/bloomrage"], a[href|="/sunbag"], a[href|="/preparingtokickthepuppy"], a[href|="/sweetiemilk"], a[href|="/pinkiehameha"]
 {background-image:url(%%misfitso%%);display:block;float:left;}
 
 /*
@@ -718,11 +718,11 @@ a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
-a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|="/rdtwismile"], a[href|="/karmawat"], a[href|="/pinkieainthavingthatshit"], a[href|="/tavilewd"], a[href|="/echopolice"], a[href|="/celoohshiny"]
+a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|="/rdtwismile"], a[href|="/karmawat"], a[href|="/pinkieainthavingthatshit"], a[href|="/tavilewd"], a[href|="/echopolice"], a[href|="/celoohshiny"], a[href|="/chrysalisrage"]
 {background-position: -100% -700%;}
 
 /* Grid pos 2,7 'motes */
-a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/mayormare"]
+a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/mayormare"], a[href|="/youdensemotherbucker"]
 {background-position: -200% -700%;}
 
 /* Grid pos 0,8 'motes */
@@ -1406,3 +1406,6 @@ a[href|="/twilightsdayout"], a[href|="/letskickthepuppy"] {width:83px;height:100
 a[href|="/morningflutter"] {width:130px;height:130px;background-position: -135px -565px;}
 a[href|="/twibag"] {width:77px;height:100px;background-position: -413px -115px;}
 a[href|="/bloomrage"] {width:78px;height:100px;background-position: -490px -115px;}
+a[href|="/sunbag"], a[href|="/preparingtokickthepuppy"] {width:82px;height:115px;background-position: -391px 0;}
+a[href|="/sweetiemilk"] {width:84px;height:115px;background-position: -473px 0;}
+a[href|="/pinkiehameha"] {width:203px;height:100px;background-position: -568px -115px;}
