--- a/source-css/shymotes.css
+++ b/source-css/shymotes.css
@@ -2282,7 +2282,27 @@ a[href="/qcm13"],
 
 a[href="/qcm14"],
 
-a[href="/qcm15"]{
+a[href="/qcm15"],
+
+a[href="/shiningm00"],
+
+a[href="/shiningm01"],
+
+a[href="/shiningm02"],
+
+a[href="/shiningm03"],
+
+a[href="/shiningm04"],
+
+a[href="/shiningm05"],
+
+a[href="/shiningm06"],
+
+a[href="/shiningm07"],
+
+a[href="/shiningm08"],
+
+a[href="/shiningm09"]{
 
   display:block;
 
@@ -2644,6 +2664,109 @@ a[href|="/qcm15"]{
 
 }
 
+a[href|="/shiningm00"]{
+
+  background-position:-210px -350px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm01"]{
+
+  background-position:-210px -420px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm02"]{
+
+  background-position:-210px -490px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm03"]{
+
+  background-position:-210px -560px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm04"]{
+
+  background-position:-210px -630px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm05"]{
+
+  background-position:-280px -0px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm06"]{
+
+  background-position:-280px -70px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm07"]{
+
+  background-position:-280px -140px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm08"]{
+
+  background-position:-280px -210px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+a[href|="/shiningm09"]{
+
+  background-position:-280px -280px;
+
+  width:70px;
+
+  height:70px;
+
+}
+
+
+
+
 
 
 
@@ -2670,7 +2793,9 @@ a[href="/flutterdashtummy"],
 
 a[href="/flutterdashlick"],
 
-a[href="/flutterpinkboop"]{
+a[href="/flutterpinkboop"],
+
+a[href="/fluttercoffee"]{
 
   display:block;
 
@@ -2797,6 +2922,16 @@ a[href|="/flutterpinkboop"]{
   background-position:-0px -1650px;
 
   width:215px;
+
+  height:150px;
+
+}
+
+a[href|="/fluttercoffee"]{
+
+  background-position:-0px -1800px;
+
+  width:150px;
 
   height:150px;
 
