--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2649,3 +2649,86 @@ a[href|="/creepyhugs"] {
  background-image: url(%%spritesheetwubs%%);
  background-position: -0px -600px;  
 } 
+
+a[href|="/fuckingshitthesefuckingguys"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 165px;
+ height: 2250px;
+ background-image: url(%%fuckingshitthisfuckingguy%%);
+} 
+
+a[href|="/fuckingshitthisfuckingguy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 165px;
+ height: 225px;
+ background-image: url(%%fuckingshitthisfuckingguy%%);
+} 
+
+a[href|="/twilizard"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -0px -0px;  
+} 
+
+
+a[href|="/lizarddash"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -212px -0px;  
+} 
+
+
+a[href|="/raritylizard"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -424px -0px;  
+} 
+
+
+a[href|="/lizardjack"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -0px -150px;  
+} 
+
+
+a[href|="/lizardpie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -212px -150px;  
+} 
+
+
+a[href|="/lizardshy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 212px;
+ height: 150px;
+ background-image: url(%%manesixaslizards%%);
+ background-position: -424px -150px;  
+} 
