--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -290,7 +290,7 @@ a[href|="/sp"] {
 #sr-form textarea[name="description"],
 .stylesheet-customize-container textarea { height: 600px; }
 
-a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"], a[href|="/fritsalute"], a[href|="/frithmmm"], a[href|="/fritcute"], a[href|="/fritmeh"], a[href|="/fritshock"], a[href|="/fritstare"], a[href|="/fritwink"], a[href|="/fritreally"], a[href|="/fritface"] {
+a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"], a[href|="/fritsalute"], a[href|="/frithmmm"], a[href|="/fritcute"], a[href|="/fritmeh"], a[href|="/fritshock"], a[href|="/fritstare"], a[href|="/fritwink"], a[href|="/fritreally"], a[href|="/fritface"], a[href|="/fritaside"] {
   display: block;
   clear: none;
   float: left;
@@ -300,7 +300,7 @@ a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fr
   background-image: url(%%fritemotes%%) !important;
 }
 
-a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"], a[href|="/rfritsalute"], a[href|="/rfrithmmm"], a[href|="/rfritcute"], a[href|="/rfritmeh"], a[href|="/rfritshock"], a[href|="/rfritstare"], a[href|="/rfritwink"], a[href|="/rfritreally"], a[href|="/rfritface"] {
+a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"], a[href|="/rfritsalute"], a[href|="/rfrithmmm"], a[href|="/rfritcute"], a[href|="/rfritmeh"], a[href|="/rfritshock"], a[href|="/rfritstare"], a[href|="/rfritwink"], a[href|="/rfritreally"], a[href|="/rfritface"], a[href|="/rfritaside"] {
   display: block;
   clear: none;
   float: left;
@@ -347,6 +347,7 @@ a[href|="/fritstare"], a[href|="/rfritstare"] { background-position: -0px -490px
 a[href|="/fritwink"], a[href|="/rfritwink"] { background-position: -70px -490px; }
 a[href|="/fritreally"], a[href|="/rfritreally"] { background-position: -140px -490px; }
 a[href|="/fritface"], a[href|="/rfritface"] { background-position: -210px -490px; }
+a[href|="/fritaside"], a[href|="/rfritaside"] { background-position: -0px -560px; }
 
 a[href|="/fritnya"], a[href|="/fritteehee"], a[href|="/hardhatfrits"] {
   display: block;
