--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -271,6 +271,15 @@ a[href|="/yasickfuck"], a[href|="/yasickfreak"] {
     clear: none;
     float: left;
     }
+a[href|="/youtooktwoshots"] {
+    width: 300px;
+    height: 250px;
+    background-image: url(%%youtooktwoshots%%);
+    display: block;
+    clear: none;
+    float: left;
+    }
+
 a[href|="/yaksmashing"], a[href|="/smashingyak"] {
     width: 122px;
     height: 140px;
